Fixed broken css for footer

--- a/src/langerak_gkv/sass/partials/_footer.scss
+++ b/src/langerak_gkv/sass/partials/_footer.scss
@@ -49,5 +49,11 @@ body > footer {
     padding-top: 5px;
     padding-bottom: 5px;
   }
+
+  article {
+    background-color: transparent;
+    padding: 0;
+    margin-bottom: 0;
+  }
 }
 
