--- a/src/langerak_gkv/static/langerak_gkv/css/screen.css
+++ b/src/langerak_gkv/static/langerak_gkv/css/screen.css
@@ -596,6 +596,12 @@ body > footer #copyright {
   padding-top: 5px;
   padding-bottom: 5px;
 }
+/* line 53, ../../../sass/partials/_footer.scss */
+body > footer article {
+  background-color: transparent;
+  padding: 0;
+  margin-bottom: 0;
+}
 
 /* line 2, ../../../sass/partials/_calendars.scss */
 body.home .calendar {
